# kairos-tracker

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SCIENCE.md  SECURITY.md  SECURITY_CHECKLIST.md  index.html  package-lock.json  package.json  plan2.md  vite.config.ts
.claude/: settings.local.json
.claude/agents/: docs.md  planner.md  reviewer.md  tester.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml  tag-on-merge.yml
.prompts/: discord.md
browser-extension/: background.js  manifest.json  popup.html  popup.js
cli/: README.md  package-lock.json  package.json
cli/src/: index.ts
coverage/: clover.xml  coverage-final.json  index.html
coverage/src/: i18n.tsx.html  index.html
src/: i18n.test.ts  i18n.tsx  main.tsx  version.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AccountabilityView.tsx  ActiveTimerBar.test.tsx  ActiveTimerBar.tsx  ActivityTimeline.test.tsx  ActivityTimeline.tsx  App.test.tsx  App.tsx  AppHeader.tsx  AttentionResidueBanner.test.tsx  AttentionResidueBanner.tsx  BurnoutRiskBadge.test.tsx  BurnoutRiskBadge.tsx  CategoryGoal.test.tsx  CategoryGoal.tsx  CategoryItem.test.tsx  CategoryItem.tsx  CategoryName.tsx  CircularTimer.test.tsx  CircularTimer.tsx  ClassifyOverlay.tsx  CodeQualityView.tsx  CommandPalette.test.tsx  CommandPalette.tsx  DailyFocusRing.tsx  DailyInsightCard.test.tsx  DailyInsightCard.tsx  DeadTimeRecoveryWidget.test.tsx  DeadTimeRecoveryWidget.tsx  DigestView.test.tsx  DigestView.tsx  DistractionBudgetWidget.test.tsx  DistractionBudgetWidget.tsx  DistractionPatternWidget.tsx  EnergyScoreBanner.test.tsx  EnergyScoreBanner.tsx  ErrorBoundary.tsx  FocusDebtBanner.tsx  FocusGuard.test.tsx  FocusGuard.tsx  FocusLock.test.tsx  (+41 more)
src/domain/: accountability.test.ts  accountability.ts  adaptiveCycles.test.ts  adaptiveCycles.ts  attentionResidue.test.ts  attentionResidue.ts  burnoutRisk.test.ts  burnoutRisk.ts  calendarImport.test.ts  calendarImport.ts  digest.ts  (+53 more)
vscode-extension/: README.md  package.json
(+108 files in other folders)
