[package]
name = "kairos-tracker"
version = "1.0.0"
description = "Science-backed productivity tracker with passive window capture, AI weekly digest, and deep focus metrics."
authors = []
license = "MIT"
repository = "https://github.com/pichau/kairos-tracker"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "psapi", "processthreadsapi", "handleapi", "winnt", "sysinfoapi", "winver", "shellapi", "wingdi", "wincred", "winreg", "libloaderapi", "windef", "minwindef", "ntdef"] }
